Update and rename dicas.html to tips.html

--- a/SMA/tips.html
+++ b/SMA/tips.html
@@ -22,7 +22,7 @@
     <main>
         <section id="tips">
             <h2>Dicas Ambientais</h2>
-            <center><img src="imagenss/earth-1389715_1920.png" width="30%"></center>
+            <center><img src="imagens/earth.jpg" width="30%"></center>
             <article>
                 <h3>Evite o desperdício de água</h3>
                 <p>Pensar no consumo é uma dica muito importante para quem se preocupa com o meio ambiente. Assim, em relação a água é possível fazer a sua parte com algumas atitudes simples como: instalar descargas que gastam menos e não deixar a torneira aberta desnecessariamente. O Colégio Stella Maris, por exemplo, adotou medidas para evitar o desperdício. Nas escolas foram instaladas presilhas em todas as torneiras e caixas d’água acopladas aos vasos sanitários. Já tivemos, inclusive, um aluno protagonizando uma campanha da Sanepar.</p>
@@ -46,7 +46,7 @@
             </article>
         </section>
     </main>
-         <center><img src="imagenss/img_MeioAmbiente.png" width="25%"></center><br><br>
+         <center><img src="imagens/img_meioambiente.png" width="25%"></center><br><br>
     <footer>
         <p>&copy; 2024 Semana do Meio Ambiente. Todos os direitos reservados.</p>
     </footer>
