--- a/SMA/index.html
+++ b/SMA/index.html
@@ -25,7 +25,7 @@
             <p>A Semana do Meio Ambiente é uma oportunidade para refletir sobre nosso impacto no planeta e aprender como podemos proteger nosso meio ambiente. Junte-se a nós para eventos, atividades e dicas sobre sustentabilidade. Veja mais sobre esse assunto na aba "Conscientização"</p>
         </section>
     </main>
-             <center><img src="imagenss/imagem planta.jpg" width="50%"></center>
+             <center><img src="imagens/imagem planta.jpg" width="50%"></center>
     <footer>
         <p>&copy; 2024 Semana do Meio Ambiente. Todos os direitos reservados.</p>
     </footer>
