--- a/SMA/conatcts.html
+++ b/SMA/conatcts.html
@@ -22,7 +22,7 @@
     <main>
         <section id="contact">
             <h2>Contato</h2>
-           <center> Entre em contato com a gente caso queria falar algo:</center>
+           <center> Entre em contato caso queria falar algo:</center>
             <form id="contact-form">
                 <label for="name">Nome:</label>
                 <input type="text" id="name" name="name" required>
@@ -39,9 +39,9 @@
     
     </main>
     <center> <img src="imagenss/imagem21.webp" width="20%"></center>
-    <h2>Autores</h2>
-    Thomaz <br>
-    Nicolas
+    <h2>Autor:</h2>
+    Beatriz <br>
+
     <footer>
         <p>&copy; 2024 Semana do Meio Ambiente. Todos os direitos reservados.</p>
     </footer>
