--- a/SMA/conatcts.html
+++ b/SMA/conatcts.html
@@ -38,7 +38,7 @@
         </section>
     
     </main>
-    <center> <img src="imagenss/imagem21.webp" width="20%"></center>
+    <center> <img src="imagens/sorriso.jpg" width="20%"></center>
     <h2>Autor:</h2>
     Beatriz <br>
 
